Changelog
=========

2.1 (unreleased)
----------------

- Nothing changed yet.


2.0 (2013-02-05)
----------------

- Fix `zopethreads` count, and make it not skew its own count of free threads.
  Bumping version, as `zopethreads` is no longer accessible through
  authenticated access, only through "secret" configuration. [leorochael]


1.3.3 (2012-12-17)
------------------

- fix totalthread for zeo client/server setup [mauro]

1.3.2 (2012-08-07)
------------------

- Allow passing the secret in the bin/munin script as well [fredvd]

- Added testrunner for Plone 4.2 [fredvd]

- updated bootstrap.py for distribute compat. [fredvd]

- Manage multiple filestorage (zodbactvity, zopecache plugins) [mauro]

1.3.1 (2012-03-15)
------------------
- Fixed egg build: was missing ZCML & docs [mitchellrj]

1.3 (2012-03-08)
----------------
* z3c.autoinclude with plone target [mamico]
* Make use of shared secret for authentication [mamico]

1.2 - 2011/04/28
----------------
* Remove threadframe dependency on python >= 2.5 [amleczko]

1.1 - 2010/02/25
----------------

* Change restrictedTraverse to unrestrictedTraverse in data fetching.
  [amleczko]


1.1a1 - 2009/08/13
------------------

* Change the package name to munin.zope [amleczko]


1.0a2 - 2009/07/27
------------------

* Fix dimension for memory usage plugin.
  [witsch]

* Add info about monitoring more than one instance, e.g. a ZEO setup.
  [witsch]

* Allow overriding the default prefix/suffix when setting up plugin links.
  [witsch]


1.0a1 - 2009/07/17
------------------

* Add script option to automatically setup symlinks for all available
  plugins in the munin plugin directory.
  [witsch]

* Add plugin to track zope's memory usage (only available on Linux).
  [witsch]

* Add logging of slow plugin execution as a safety net.
  [witsch]

* Allow setting of necessary configuration values directly in buildout.
  [witsch]

* Refactor and try to simplify things.
  [witsch]


0.0.3 - 2009/03/30
------------------
