@@ -1,0 +1,22 @@
+[buildout]
+extends = buildout.cfg
+parts =
+    filestorage
+    instance
+    test
+    munin
+
+[filestorage]
+recipe=collective.recipe.filestorage
+parts =
+    one
+    t_w_o
+    three
+
+[munin]
+recipe = zc.recipe.egg
+eggs = munin.zope
+initialization =
+    from munin.zope.plugins import initFilestorages
+    initFilestorages("""${filestorage:parts}""".split())
+arguments = http_address='8080', user='${instance:user}'
